# fastapi-services

./: README.md
backend/: .env.sample  .gitignore  README.md  compose.yaml  pyproject.toml
backend/app/: main.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
