[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.ruff]
include = [
    "app/**/*.py",
    "pyproject.toml",
    "tests/**/*.py",
    "utils/**/*.py"
]

[tool.taskipy.tasks]
dev = "uv run uvicorn app.main:app --reload"
lint = "uv run ruff check"
start = "uv run uvicorn app.main:app"
test = "uv run pytest -q"
